--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,24 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../reset.css">
+    <link rel="stylesheet" href="style.css" >
+
+    <title>First</title>
+  </head>
+  <body>
+    <header class="main-header"></header>
+    <main>
+      <aside class="aside"></aside>
+      <section class="main-section">
+      <footer class="footer">
+
+      </footer></section>
+      <aside class="aside"></aside>
+
+    </main>
+
+  </body>
+</html><!-- Put your HTML HERE, make sure to connect your style.css sheet -->
